Not working with the address and autofill

--- a/address.html
+++ b/address.html
@@ -31,16 +31,16 @@
                             <{/if}>
                             <div class="form-row form-row-input">
                                 <label for="order_address">Adresse</label>
-                                <input type="text" name="order_address" value="" id="order_address" placeholder="Adresse" autocomplete="billing street-address" required/>
+                                <input type="text" name="order_address" value="" id="order_address" placeholder="Adresse" required/>
                             </div>
                             <div class="form-row form-row-input">
                                 <div class="form-row-zip">
                                     <label for="order_zipcode">Postnr.</label>
-                                    <input type="text" name="order_zipcode" value="" id="order_zipcode" placeholder="Postnr." autocomplete="billing address-level1" required/>
+                                    <input type="text" name="order_zipcode" value="" id="order_zipcode" placeholder="Postnr." required/>
                                 </div>
                                 <div class="form-row-city">
                                     <label for="order_city">By</label>
-                                    <input type="text" name="order_city" value="" id="order_city" placeholder="By" autocomplete="billing address-level2" required/>
+                                    <input type="text" name="order_city" value="" id="order_city" placeholder="By" required/>
                                 </div>
                             </div>
 
