--- a/order_sent.html
+++ b/order_sent.html
@@ -1,4 +1,4 @@
-<{include file="mails/_include_header.html"}>
+<{include file="_include_mails-header.html"}>
 
           <table class="outer"><tr><td>
 
@@ -51,4 +51,4 @@
           </table>
 
           </td></tr></table>
-<{include file="mails/_include_footer.html"}>
+<{include file="_include_mails-footer.html"}>
