--- a/invoice.html
+++ b/invoice.html
@@ -1,4 +1,4 @@
-<{include file="mails/_include_header.html"}>
+<{include file="_include_mails-header.html"}>
           <table class="outer"><tr><td>
 
           <table class="container">
@@ -98,4 +98,4 @@
               </td>
             </tr>
           </table>
-<{include file="mails/_include_footer.html" title="For noget tid siden købte du ..."}>
+<{include file="_include_mails-footer.html" title="For noget tid siden købte du ..."}>
