--- a/_include_mails-cta.html
+++ b/_include_mails-cta.html
@@ -1,1 +1,1 @@
-<p><a href="<{$url}>"><{$cta}></a>.</p>
+<p><a href="<{$url}>" style="background-color:#EB7035;border:1px solid #EB7035;border-radius:3px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:16px;line-height:44px;text-align:center;text-decoration:none;width:150px;-webkit-text-size-adjust:none;mso-hide:all;"><{$cta}> &rarr;</a></p>
