--- a/mails/after_purchase.html
+++ b/mails/after_purchase.html
@@ -9,45 +9,19 @@
 	<p>Hej <{$order->getOrderName()|escape}>,</p>
 
 	<p>For noget tid siden købte du:</p>
-	
-	<{assign var="products" value=$order->getProducts()}>
-	
-	<{section name="i" loop=$products}>	
 
-			<a href="<{$webshop->getUrl()|escape}>/<{$products[i]->getUrl()|escape}>">
-				<{assign var="image" value=$products[i]->getImage()}>
-			
-				<{if $image}>
-					<img src="<{$webshop->getUrl()|escape}>/<{$image->getSrc(200, 100, 'fit')}>" alt="<{$image->getDescription()|escape}>" title="<{$image->getDescription()|escape}>" <{$image->getHtmlSize(200, 100, 'fit')}>/>
-				<{/if}>
-			</a>	
-		
-		
-	<{/section}>
+	<{assign var="products" value=$order->getProducts()}>
+	<{include file="_include_mails-productlist.html" products=$products}>
 
 	<{assign var="loop" value=$webshop->getAfterPurchase($products)}>
 
 	<{if $loop}>
 		<p>Derfor tænkte vi, at det måske kunne være interessant med:</p>
-		<{section name="i" loop=$loop}>	
 
-			<div class="left">
-
-				<a href="<{$webshop->getUrl()|escape}>/<{$loop[i]->getUrl()|escape}>">
-					<{assign var="image" value=$loop[i]->getImage()}>
-
-					<h4><{$loop[i]->getName()|escape}></h4>
-
-					<{if $image}>
-						<img src="<{$webshop->getUrl()|escape}>/<{$image->getSrc(200, 100, 'fit')}>" alt="<{$image->getDescription()|escape}>" title="<{$image->getDescription()|escape}>" <{$image->getHtmlSize(200, 100, 'fit')}>/>
-					<{/if}>
-				</a>	
-
-			</div>
-
-		<{/section}>
-
+		<{include file="_include_mails-products-upsell.html" products=$loop}>
 	<{/if}>
+
+	<p>Med venlig hilsen<br><{$webshop->getName()}></p>
 
 	<{include file="_include_mails-footer.html"}>
 
