--- a/mails/in_stock_mail.html
+++ b/mails/in_stock_mail.html
@@ -6,8 +6,15 @@
 
 	<p>Hej,</p>
 
-	<p>Vi har nu <{$product->getName()|escape}> på lager igen, men kun en begrænset mængde, så skynd dig at bestil den i dag.</p>
+	<p>Vi har nu <a href="<{$product->getRemoteUrl()|escape}>?utm_source=shoporama&utm_medium=email&utm_campaign=in_stock_email"><{$product->getName()|escape}></a> på lager igen, men kun en begrænset mængde, så skynd dig at bestil den i dag.</p>
 
-	<p>Du kan bestille den på <a href="<{$product->getRemoteUrl()|escape}>?utm_source=shoporama&utm_medium=email&utm_campaign=in_stock_email"><{$product->getUrl()|escape}></a></p>
+	<{assign var="image" value=$product->getImage()}>
 
+	<{if $image}>
+		<a href="<{$product->getRemoteUrl()|cat:"?utm_source=shoporama&utm_medium=email&utm_campaign=in_stock_email"|escape}>"><img src="<{$webshop->getUrl()}><{$image->getSrc(200, 200, 'fit')}>" alt="<{$product->getName()|escape}>"/></a>
+	<{/if}>
+
+	<{include file="_include_mails-cta.html" cta="Bestil" url=$product->getRemoteUrl()|cat:"?utm_source=shoporama&utm_medium=email&utm_campaign=in_stock_email"|escape}>
+
+	<p>Med venlig hilsen<br><{$webshop->getName()}></p>
 <{/if}>
