--- a/mails/payment_mail.html
+++ b/mails/payment_mail.html
@@ -8,16 +8,7 @@
 
 	<p>Du har en ordre liggende hos os, som endnu ikke er betalt. Du har bestilt de følgende produkter.</p>
 
-	<{assign var="products" value=$order->getProducts()}>
-	<{section name="i" loop=$products}>
-
-		<{assign var="image" value=$products[i]->getImage()}>
-
-		<{if $image}>
-			<a href="<{$basket_url|escape}>"><img src="<{$webshop->getUrl()}><{$image->getSrc(250, 100, 'fit')}>" alt="<{$products[i]->getName()}>"/></a>
-		<{/if}>
-
-	<{/section}>
+	<{include file="_include_mails-productlist.html" products=$order->getProducts()}>
 
 	<p>Skriv meget gerne, hvis du har spørgsmål, eller der skete en eller anden fejl undervejs i din bestilling, så du ikke kunne betale ordren.</p>
 
