--- a/mails/basket_mail.html
+++ b/mails/basket_mail.html
@@ -1,6 +1,7 @@
+<{assign var="subject_text" value="Kan vi hjælpe med noget?"}>
 <{if $subject}>
 
-	Kan vi hjælpe med noget?
+	<{$subject_text}>
 	
 <{else}>
 
