--- a/mails/in_stock_mail.html
+++ b/mails/in_stock_mail.html
@@ -1,6 +1,7 @@
+<{assign var="subject_text" value="Vi har nu "|cat:$product->getName()|cat:" på lager igen"}>
 <{if $subject}>
 
-	Vi har nu <{$product->getName()}> på lager igen
+	 <{$subject_text}>
 
 <{else}>
 
