--- a/mails/payment_mail.html
+++ b/mails/payment_mail.html
@@ -1,6 +1,7 @@
+<{assign var="subject_text" value="Manglende betaling for ordre"}>
 <{if $subject}>
 
-	Manglende betaling for ordre
+	<{$subject_text}>
 	
 <{else}>
 
