--- a/mails/product_review_mail.html
+++ b/mails/product_review_mail.html
@@ -1,6 +1,7 @@
+<{assign var="subject_text" value="Hvad synes du dine varer?"}>
 <{if $subject}>
 
-Hvad synes du om din produkterne?
+    <{$subject_text}>
 
 <{else}>
 
