--- a/mails/basket_mail.html
+++ b/mails/basket_mail.html
@@ -5,17 +5,18 @@
 	
 <{else}>
 
-	<p>Hej</p>
+	<p>Hej,</p>
 
 	<p>Jeg er en robot, der holder øje med webshoppen <a href="<{$basket_url|escape}>"><{$webshop->getName()|escape}></a>. Jeg har lagt mærke til, at du har lagt varer i kurven hos <a href="<{$basket_url|escape}>">kurven</a>, men af en eller anden grund lykkedes det ikke at gennemføre ordren.</p>
 
+	<{strip}>
 	<p>Du skal vide, at vi meget gerne personligt vil hjælpe dig, hvis noget gik galt, du blev i tvivl om noget eller har brug for hjælp til noget. Du kan kontakte os
 		<{if $settings.Footer.Email && $settings.Footer.Telefon}>
 		på <{$settings.Footer.Telefon}> eller <{$settings.Footer.Email}>
 		<{else}>
 		eller ved at svare på denne e-mail
 		<{/if}>.
-	</p>
+	</p><{/strip}>
 
 	<p>Du har lagt følgende i kurven:</p>
 
