--- a/mails/payment_mail.html
+++ b/mails/payment_mail.html
@@ -5,7 +5,7 @@
 	
 <{else}>
 
-	<p>Hej</p>
+	<p>Hej,</p>
 
 	<p>Du har en ordre liggende hos os, som endnu ikke er betalt. Du har bestilt de følgende produkter.</p>
 
@@ -13,7 +13,7 @@
 
 	<p>Skriv meget gerne, hvis du har spørgsmål, eller der skete en eller anden fejl undervejs i din bestilling, så du ikke kunne betale ordren.</p>
 
-	<{include file="_include_mails-cta.html" cta="Gå til betalingen" url=$payment_url|escape}>
+	<{include file="_include_mails-cta.html" cta="Se din ordre og betal" url=$order->getPublicUrl()|escape}>
 
 	<p>Med venlig hilsen<br><{$webshop->getName()}></p>
 
