--- a/mails/after_purchase.html
+++ b/mails/after_purchase.html
@@ -7,22 +7,24 @@
 
 	<{include file="_include_mails-header.html" title=$subject_text}>
 
-	<p>Hej <{$order->getOrderName()|escape}>,</p>
+	<p>Hej,</p>
 
 	<p>For noget tid siden købte du:</p>
 
 	<{assign var="products" value=$order->getProducts()}>
 	<{include file="_include_mails-productlist.html" products=$products}>
 
+	<p>Vi er meget interesseret i at høre, om vi kunne have gjort noget bedre - eller du har nogen spørgsmål?</p>
+
+	<p>Med venlig hilsen<br><{$webshop->getName()}></p>
+
 	<{assign var="loop" value=$webshop->getAfterPurchase($products)}>
 
 	<{if $loop}>
-		<p>Derfor tænkte vi, at det måske kunne være interessant med:</p>
+		<p>P.S. Måske kunne du også være interesseret i følgende produkter:</p>
 
 		<{include file="_include_mails-products-upsell.html" products=$loop}>
 	<{/if}>
-
-	<p>Med venlig hilsen<br><{$webshop->getName()}></p>
 
 	<{include file="_include_mails-footer.html"}>
 
