--- a/mails/product_review_mail.html
+++ b/mails/product_review_mail.html
@@ -5,7 +5,7 @@
 
 <{else}>
 
-    <{include file="_include_mails-header.html" title="Hvad synes du om din produkterne?"}>
+    <{include file="_include_mails-header.html" title=$subject_text}>
 
     <p>Hej,</p>
 
