--- a/mails/payment_mail.html
+++ b/mails/payment_mail.html
@@ -9,7 +9,7 @@
 
 	<p>Hej,</p>
 
-	<p>Du har en ordre liggende hos os, som endnu ikke er betalt. Du har bestilt de følgende produkter.</p>
+	<p>Du har en ordre liggende hos os, som endnu ikke er betalt. Du har bestilt de følgende:</p>
 
 	<{include file="_include_mails-productlist.html" products=$order->getProducts()}>
 
