--- a/search.html
+++ b/search.html
@@ -1,4 +1,4 @@
-<div id="site" class="">
+<div id="site" class="search-page">
 
     <{include file="_include_header.html"}>
 
@@ -34,11 +34,12 @@
             </div></div><!--/.container .row-->
         </section>
 
+        <{include file="_include_brandwall.html"}>
+
 
     </section><!--/#sitecontent-->
 
     <{include file="_include_footer.html"}>
-
 
     <button id="totop">Til toppen</button>
 
